@@ -35,7 +35,6 @@ Web::Simple            = 0.030
 Unexpected             = v0.43.0
 Web::Components        = v0.5.0
 Web::Components::Role::TT = v0.4.0
-Web::ComposableRequest = v0.4.0
 YAML::Tiny             = 1.67
 
 [Prereqs / ConfigureRequires]
