@@ -1,0 +1,20 @@
+server {
+   server_name [% domain %] www.[% domain %];
+
+   root /home/app-doh/local/var/root;
+
+   location = / {
+      rewrite ^/$ /doh/static/en/index.html;
+   }
+
+   location /doh {
+      try_files $uri $uri/ @doh_proxy;
+   }
+
+   location @doh_proxy {
+      fastcgi_pass unix:/home/app-doh/local/var/tmp/fastcgi.sock;
+      include fastcgi_params;
+      fastcgi_param SCRIPT_NAME "";
+      fastcgi_param PATH_INO $uri;
+   }
+}
