@@ -1,5 +1,8 @@
 Revision history for App-Doh
 
+          - Fixed configuration assetdir attribute default value
+          - Fixed daemon access log and pid file names
+
 0.15.1    2015-12-18 16:25:27
           - Merged docs path config into main file
           - Moved users.json to ctrldir
